--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,9 @@ FROM node:20-slim
 # Install Python and ffmpeg (yt-dlp requires Python)
 RUN apt-get update && apt-get install -y \
     python3 \
+    python3-pip \
     ffmpeg \
+    && ln -s /usr/bin/python3 /usr/bin/python \
     && rm -rf /var/lib/apt/lists/*
 
 # Create app directory
@@ -12,8 +14,8 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install Node.js dependencies (includes yt-dlp-exec which downloads yt-dlp automatically)
-RUN npm install --production
+# Install Node.js dependencies
+RUN npm install --omit=dev
 
 # Copy application code
 COPY . .
@@ -21,9 +23,5 @@ COPY . .
 # Expose port
 EXPOSE 3001
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD node -e "require('http').get('http://localhost:3001/health', (r) => r.statusCode === 200 ? process.exit(0) : process.exit(1))"
-
-# Start the application
-CMD ["npm", "start"]
+# Start the server
+CMD ["node", "server.js"]
